--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,9 @@
 
     <string name="login_email">@duksung.ac.kr</string>
     <string name="title_activity_look_up_user">LookUpUser</string>
+    <string name="shared_preference_user_info">User Info</string>
+    <string name="user_token">User Token</string>
+
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
