chore: 로그와 주석 정리

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
 
     <string name="login_email">@duksung.ac.kr</string>
     <string name="title_activity_look_up_user">LookUpUser</string>
+
+    <!-- 토큰값 저장해두는 SharedPreference 키값과 getString 키값 -->
     <string name="shared_preference_user_info">User Info</string>
     <string name="user_token">User Token</string>
 
